# uavs-cooperative-transportation

./: .gitignore  README.md
gps/: CMakeLists.txt  package.xml
gps/include/: utm.h
gps/src/: gpstest.cpp  readme.md
offb/: CMakeLists.txt  package.xml
offb/include/: geo.h  geo2.h  geo2_new.h  geo_plan.h  geometric_controller.cpp  geometric_controller.h  lpf.h  qptrajectory.cpp  qptrajectory.h  rls.cpp  rls.h
offb/launch/: coop.launch  multiuav.launch  readme.md  world.launch
offb/src/: geo.cpp  geo2.cpp  geo2_new.cpp  geo_plan.cpp  mocap.cpp  obstacle.cpp
offb/world/: drone.world  drone_inv.world
path_planner/include/: constants.h  constants.h.autosave  path.h
path_planner/launch/: config.rviz  config2.rviz  manual.launch  map.launch  map.rviz
path_planner/maps/: map.yaml
path_planner/src/: node3d.cpp  path.cpp
payload/: CMakeLists.txt  package.xml
payload/launch/: imu.launch  imu2.launch  read
payload/src/: check.cpp  drone_mocap.cpp  forceest.cpp  forceest.h  kalmanfilter.cpp  kalmanfilter.h  lpf.cpp  lpf2.cpp  lpf2.h  measure.cpp  mocap.cpp  so3.cpp  thetap.cpp  trigger.cpp  ukf.cpp  ukf.h
plotmap/: CMakeLists.txt  package.xml
plotmap/include/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qptrajectory.cpp
plotmap/src/: README.md  plot_rviz.cpp  plot_rviz.h  plotmap.cpp
plottest/: CMakeLists.txt  package.xml
plottest/GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
plottest/include/: bagconv.h  rigidbody.cpp  rigidbody.h
plottest/src/: bagconv.cpp  subtest.cpp  testplot.cpp
rotors_simulator/rotors_control/: CMakeLists.txt
rotors_simulator/rotors_control/src/nodes/: force_controller.cpp  force_controller_node.h  lee_position_controller_node.cpp
rotors_simulator/rotors_description/urdf/: firefly.xacro  multirotor_base.xacro
rotors_simulator/rotors_gazebo/: CMakeLists.txt
rotors_simulator/rotors_gazebo/launch/: controller.launch  controller2.launch  firefly_swarm_hovering_example.launch  mav_hovering_example.launch  path_plan.launch  spawn_env.launch
rotors_simulator/rotors_gazebo/models/obstacle/: model.config  obstacle.sdf
rotors_simulator/rotors_gazebo/models/payload_rec/: model.config  payload_rec.sdf
rotors_simulator/rotors_gazebo/src/: apply_wrench.cpp
rotors_simulator/rotors_gazebo/worlds/: drone_inv.world  maze3.world  obstacle_world.world  obstacle_world2.world  obstacle_world3.world
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
rotors_simulator/rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_fw_dynamics_plugin.h  gazebo_imu_plugin.h  gazebo_magnetometer_plugin.h  gazebo_mavlink_interface.h  gazebo_motor_model.h  sdf_api_wrapper.hpp
rotors_simulator/rotors_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_fw_dynamics_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_noisydepth_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_pressure_plugin.cpp  gazebo_wind_plugin.cpp  obstacle_plugin.cpp  payload_joint_plugin.cpp
rotors_simulator/rqt_rotors/src/rqt_rotors/: hil_plugin.py
ukf/: CMakeLists.txt  README.md  package.xml
ukf/launch/: leader_follower_force_estimate.launch
ukf/src/: force_estimate.cpp  force_estimate.cpp.autosave  forceest.cpp  forceest.h  so3.cpp  ukf.cpp  ukf.h
